[project]
name = "organic-unprompted"
version = "0.1.0"
description = "A collection of math routines and algorithms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bqplot==0.12.45",
    "hvplot==0.12.2",
    "intake>=2.0.9",
    "jupyterlab==4.5.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "xarray==2026.2.0",
]
